--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -3,14 +3,14 @@
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-<div class="tab">
-  <button class="tablinks" onclick="openCity(event, '培養')">培養</button>
-  <button class="tablinks" onclick="openCity(event, '工廠')">工廠</button>
-  <button class="tablinks" onclick="openCity(event, '探險')">探險</button>
-  <button class="tablinks" onclick="openCity(event, '天賦')">天賦</button>
-  <button class="tablinks" onclick="openCity(event, '說明')" id="defaultOpen">說明</button>
-</div>
 
+<div class="tab">
+  <button class="tablinks" onclick="openTab(event, '培養')">培養</button>
+  <button class="tablinks" onclick="openTab(event, '工廠')">工廠</button>
+  <button class="tablinks" onclick="openTab(event, '探險')">探險</button>
+  <button class="tablinks" onclick="openTab(event, '天賦')">天賦</button>
+  <button class="tablinks" onclick="openTab(event, '說明')"id="defaultOpen">說明</button>
+</div>
 <div id="培養" class="tabcontent">
   <h3>培養頁面</h3>
   <p>培養槽目前是空的.</p>
@@ -35,7 +35,7 @@
  <h3>Sire Mound 怎麼玩?</h3>
  <p>這個一個放置型網頁遊戲.</p>
 </div>
-<script src="Scripts/Tab.js"></script>
 
+<script src="Scripts/Tab.js"></script>
 </body>
 </html>
