--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -3,6 +3,8 @@
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+<script src="Scripts/tab.js"></script>
+<script src="Scripts/sireProgress.js"></script>
 
 <div class="tab">
   <button class="tablinks" onclick="openTab(event, '培養')">培養</button>
@@ -13,7 +15,16 @@
 </div>
 <div id="培養" class="tabcontent">
   <h3>培養頁面</h3>
-  <p>培養槽目前是空的.</p>
+
+<div id="sireProgress">
+  <div id="sireBar"></div>
+</div>
+
+<br>
+<button onclick="move()">加速培養</button> 
+
+</div>
+
 </div>
 
 <div id="工廠" class="tabcontent">
@@ -35,7 +46,5 @@
  <h3>Sire Mound 怎麼玩?</h3>
  <p>這個一個放置型網頁遊戲.</p>
 </div>
-
-<script src="Scripts/tab.js"></script>
 </body>
 </html>
