挖豪棒棒出現title 囉
挖豪棒棒出現title 囉

--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -3,6 +3,12 @@
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+<div class="title">Sire Mound <small>v0.2 - 17/11/01 updata </small>
+<div class="status">
+            <span style="margin-left: 15px" >世代: 0</span>
+            <span style="margin-left: 15px" >資產: 0</span></div>
+<br>
+<br>
 <div class="tab">
   <button class="tablinks" onclick="openTab(event, 'sire')">培養</button>
   <button class="tablinks" onclick="openTab(event, 'produce')">生產</button>
@@ -15,9 +21,7 @@
 <p>培養中.</p> 
 <div id="sireProgress"><div id="sireBar"></div></div>
 <br>
-</div>
-
-</div>
+</div></div>
 
 <div id="produce" class="tabcontent">
   <h3>工廠頁面</h3>
@@ -45,7 +49,7 @@
 </div>
 
 <div id="help" class="tabcontent">
- <h3>Sire Mound 怎麼玩?</h3>
+ <h3>怎麼玩?</h3>
  <p>這個一個放置型網頁遊戲.</p>
 </div>
 <script src="Scripts/sireProgress.js"></script>
