--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -10,13 +10,13 @@
 <br>
 <br>
 <div class="tab">
-  <button class="tablinks" onclick="openTab(event, 'sire')">培養</button>
-  <button class="tablinks" onclick="openTab(event, 'produce')">生產</button>
-  <button class="tablinks" onclick="openTab(event, 'adventure')">探險</button>
-  <button class="tablinks" onclick="openTab(event, 'passive')">天賦</button>
-<button class="tablinks" onclick="openTab(event, 'store')">商店</button>
-  <button class="tablinks" onclick="openTab(event, 'achievement')">成就</button>
-  <button class="tablinks" onclick="openTab(event, 'help')"id="defaultOpen">說明</button></div>
+  <button class="tablinks" onclick="openTab(event, 'sire')">💕 培養</button>
+  <button class="tablinks" onclick="openTab(event, 'produce')">🏭 生產</button>
+  <button class="tablinks" onclick="openTab(event, 'adventure')">🏆 探險</button>
+  <button class="tablinks" onclick="openTab(event, 'passive')">💉 天賦</button>
+<button class="tablinks" onclick="openTab(event, 'store')">🎁 商店</button>
+  <button class="tablinks" onclick="openTab(event, 'achievement')">📝 成就</button>
+  <button class="tablinks" onclick="openTab(event, 'help')"id="defaultOpen">🔰 說明</button></div>
 <div id="sire" class="tabcontent">
 <p>培養中.</p> 
 <div id="sireProgress"><div id="sireBar"></div></div>
