原來我少了一個DIV
原來我少了一個DIV

--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -6,9 +6,8 @@
 <div class="title">Sire Mound <small>v0.2 - 17/11/01 updata </small>
 <div class="status">
             <span style="margin-left: 15px" >世代: 0</span>
-            <span style="margin-left: 15px" >資產: 0</span></div>
-<br>
-<br>
+            <span style="margin-left: 15px" >資產: 0</span></div></div>
+
 <div class="tab">
   <button class="tablinks" onclick="openTab(event, 'sire')">💕 培養</button>
   <button class="tablinks" onclick="openTab(event, 'produce')">🏭 生產</button>
@@ -18,39 +17,40 @@
   <button class="tablinks" onclick="openTab(event, 'achievement')">📝 成就</button>
   <button class="tablinks" onclick="openTab(event, 'help')"id="defaultOpen">🔰 說明</button></div>
 <div id="sire" class="tabcontent">
-<p>培養中.</p> 
+ <span>培養頁面</span> 
 <div id="sireProgress"><div id="sireBar"></div></div>
 <br>
 </div></div>
 
 <div id="produce" class="tabcontent">
-  <h3>工廠頁面</h3>
+ <span>工廠頁面</span> 
   <p>工廠未建置.</p> 
 </div>
 
 <div id="adventure" class="tabcontent">
-  <h3>冒險頁面</h3>
+  <span>冒險頁面</span> 
   <p>未開發.</p>
 </div>
 
 <div id="passive" class="tabcontent">
-  <h3>天賦頁面</h3>
+  <span>天賦頁面</span> 
   <p>未開發.</p>
 </div>
 
 <div id="store" class="tabcontent">
-  <h3>商店頁面</h3>
+  <span>商店頁面</span> 
   <p>未開發.</p>
 </div>
 
 <div id="achievement" class="tabcontent">
-  <h3>成就頁面</h3>
+  <span>成就頁面</span> 
   <p>未開發.</p>
 </div>
 
 <div id="help" class="tabcontent">
- <h3>怎麼玩?</h3>
- <p>這個一個放置型網頁遊戲.</p>
+ <span>怎麼玩?</span> 
+ <p>目前只有展示功能還沒有遊戲型態.</p>
+ <p>這是一個網頁遊戲.</p>
 </div>
 <script src="Scripts/sireProgress.js"></script>
 <script src="Scripts/tab.js"></script>
