增加中文名稱囉
增加中文名稱囉

--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -1,5 +1,5 @@
 ﻿<html>
-<head> <title> - .: Sire Mound :. - </title>
+<head> <title> 繁殖山丘 Sire Mound </title>
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
