--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
 
 <p> </p>
 
-<p><a href="./SireMound/index.htm">聽說測試用網頁</a></p>
+<p><a href="./SireMound/index.htm">繁殖山丘 Sire Mound</a></p>
 
 </body>
 </html>
