--- a/index.htm
+++ b/index.htm
@@ -1,20 +1,18 @@
 ﻿
 <!DOCTYPE html>
 <html>
-<head> <title>阿空回收桶</title> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<head> <title>阿空的垃圾桶</title> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 </head>
 <body>
 
-<h3>阿空's 倉庫</h3>
-<p> </p>
-<p>更新日期 : 17/10/31</p>
+<div class="title">阿空垃圾桶 <small> 17/11/01 updata </small></div>
 <p>歡迎來到阿空的垃圾桶.</p>
 <p>聽說這邊專門收垃圾. (?</p>
 
-<p> </p>
 
-<p><a href="./SireMound/index.htm">繁殖山丘 Sire Mound</a></p>
+
+<p><a href="./SireMound">繁殖山丘 Sire Mound</a></p>
 
 </body>
 </html>
