很漂亮的UNICODE更新囉
很漂亮的UNICODE更新囉

--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -3,18 +3,21 @@
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-<div class="title">Sire Mound <small>v0.2 - 17/11/01 updata </small>
+<div class="title">📁 Sire Mound <small>v0.2 - 17/11/01 updata </small>
 <div class="status">
-            <span style="margin-left: 15px" >世代: 0</span>
-            <span style="margin-left: 15px" >資產: 0</span></div></div>
+            <span style="margin-left: 15px" >💒 世代: 0</span>
+            <span style="margin-left: 15px" >💰 資產: 0</span></div></div>
 
 <div class="tab">
-  <button class="tablinks" onclick="openTab(event, 'sire')">💕 培養</button>
-  <button class="tablinks" onclick="openTab(event, 'produce')">🏭 生產</button>
-  <button class="tablinks" onclick="openTab(event, 'adventure')">🏆 探險</button>
-  <button class="tablinks" onclick="openTab(event, 'passive')">💉 天賦</button>
-<button class="tablinks" onclick="openTab(event, 'store')">🎁 商店</button>
-  <button class="tablinks" onclick="openTab(event, 'achievement')">📝 成就</button>
+  <button class="tablinks" onclick="openTab(event, 'sire')">💞 培養</button>
+  <button class="tablinks" onclick="openTab(event, 'produce')">📦 生產</button>
+  <button class="tablinks" onclick="openTab(event, 'adventure')">💥 探險</button>
+  <button class="tablinks" onclick="openTab(event, 'mine')">💎 挖掘</button>
+  <button class="tablinks" onclick="openTab(event, 'passive')">🌱 天賦</button>
+  <button class="tablinks" onclick="openTab(event, 'evolution')">💉 進化</button>
+  <button class="tablinks" onclick="openTab(event, 'store')">💸 商店</button>
+  <button class="tablinks" onclick="openTab(event, 'achievement')">🏆 成就</button>
+  <button class="tablinks" onclick="openTab(event, 'fileslot')">💾 管理</button>
   <button class="tablinks" onclick="openTab(event, 'help')"id="defaultOpen">🔰 說明</button></div>
 <div id="sire" class="tabcontent">
  <span>培養頁面</span> 
@@ -32,6 +35,11 @@
   <p>未開發.</p>
 </div>
 
+<div id="mine" class="tabcontent">
+  <span>挖掘頁面</span> 
+  <p>未開發.</p>
+</div>
+
 <div id="passive" class="tabcontent">
   <span>天賦頁面</span> 
   <p>未開發.</p>
@@ -45,6 +53,16 @@
 <div id="achievement" class="tabcontent">
   <span>成就頁面</span> 
   <p>未開發.</p>
+</div>
+
+<div id="evolution" class="tabcontent">
+  <span>進化頁面</span> 
+  <p>進化條件不足.</p>
+</div>
+
+<div id="fileslot" class="tabcontent">
+  <span>遊戲管理設定</span> 
+  <p> >自動存檔.</p>
 </div>
 
 <div id="help" class="tabcontent">
