--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -67,8 +67,9 @@
 
 <div id="help" class="tabcontent">
  <span>怎麼玩?</span> 
- <p>目前只有展示功能還沒有遊戲型態.</p>
- <p>這是一個網頁遊戲.</p>
+ <span>目前只有展示功能還沒有遊戲型態.</span><br>
+ <span>聽說花了三個小時打造.如果覺得無聊的話可以到培養去看看 (誤</span><br>
+<div class="title"><small>老實說我寫到一半的時候有想去寫商人物語的衝動....</small>
 </div>
 <script src="Scripts/sireProgress.js"></script>
 <script src="Scripts/tab.js"></script>
