解說補完計畫
解說補完計畫

--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -22,17 +22,25 @@
 <div id="sire" class="tabcontent">
  <span>培養頁面</span> 
 <div id="sireProgress"><div id="sireBar"></div></div>
+<span>目前還是展示用說明.上方的繁殖條跑滿之後即可繁衍出下一代.</span><br>
+<span>由一公一母的🐜下去繁殖</span><br>
+<span>每一隻🐜的狀態屬性基因該狀態的機率為</span> <br><br>
+<span>🐜陰性/🐜陰性 無</span><br>
+<span>🐜隱性/🐜陰性 突變發生率1%</span><br>
+<span>🐜隱性/🐜顯性 突變發生率50%</span><br>
+<span>🐜顯性/🐜顯性 突變發生率100%</span><br><br>
+<span>配種程式還在撰寫中...</span>
 <br>
 </div></div>
 
 <div id="produce" class="tabcontent">
  <span>工廠頁面</span> 
-  <p>工廠未建置.</p> 
+  <p>把你討厭的🐜，丟進來未你產能賺錢吧。哈哈哈！</p> 
 </div>
 
 <div id="adventure" class="tabcontent">
   <span>冒險頁面</span> 
-  <p>未開發.</p>
+  <p>派遣你的🐜，讓他打片天下。</p>
 </div>
 
 <div id="passive" class="tabcontent">
@@ -50,7 +58,7 @@
   <input type="text" id="myInput" placeholder="新增...">
   <span onclick="newElement()" class="addBtn">添加</span>
 </div>
-
+<span>還會再修正及新增的成就頁面</span>
 <ul id="myUL">
   <li>擁有 第 1世代</li>
   <li>擁有 第 10世代</li>
@@ -75,10 +83,19 @@
 </div>
 
 <div id="help" class="tabcontent">
- <span>怎麼玩?</span> 
- <span>目前沒有任何功能.全部都是展示用.</span><br>
- <span>聽說花了三個小時打造.如果覺得無聊的話可以到培養去看看 (誤</span><br>
-<div class="title"><small>老實說我寫到一半的時候有想去寫商人物語的衝動....</small>
+ <span>怎麼玩</span> 
+ <p>問題討論及分享可至聊天討論</p>
+<span>⚡注意！該遊戲目前還在進行展示階段，請不要放置超過10分鐘。</span> <div class="title"><small>老實說我寫到一半的時候有想去寫商人物語的衝動....</small></div><br><br>
+ <div class="title"><span>🎓 快速指南</div></span>
+<p>重複換代！增加培養出特殊基因及特殊技能的🐜</p>
+ <span>💞 培養</span><br>
+ <p>巢穴就是培養的地方，你可以在這裡進行繁衍後代。一旦將始祖的工蜂或是蜂后取代後就不能反悔，經過一段時間後就會產出下一代。</p>
+
+ <span>📦 生產</span><br> 
+ <p>將繁衍出來的工蜂派去做生產，產出的產品將可以轉換成資金。</p>
+
+ <span>💥 探險</span><br>
+ <p>探索這個世界！</p>
 </div>
 <script src="Scripts/sireProgress.js"></script>
 <script src="Scripts/achievement.js"></script>
