--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -16,7 +16,7 @@
   <button class="tablinks" onclick="openTab(event, 'evolution')">💉 進化</button>
   <button class="tablinks" onclick="openTab(event, 'store')">💸 商店</button>
   <button class="tablinks" onclick="openTab(event, 'achievement')">🏆 成就</button>
-  <button class="tablinks" onclick="openTab(event, 'chatbox')">💬 聊天</button>
+  <button class="tablinks" onclick="openTab(event, 'chatbox')">💬 討論</button>
   <button class="tablinks" onclick="openTab(event, 'fileslot')">💾 管理</button>
   <button class="tablinks" onclick="openTab(event, 'help')"id="defaultOpen">🔰 說明</button></div>
 <div id="sire" class="tabcontent">
