很棒棒黑色
很棒棒黑色

--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -1,13 +1,13 @@
 ﻿<html>
-<head> <title> 繁殖山丘 Sire Mound </title>
+<head> <title>👾 繁殖山丘 Sire Mound </title>
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-<div class="title">📁 Sire Mound <small>v0.2 - 17/11/01 updata </small>
+<div class="title">👾 Sire Mound <small>v0.3.0 - 17/11/01 updata </small>
 <div class="status">
             <span style="margin-left: 15px" >💒 世代: 0</span>
             <span style="margin-left: 15px" >💰 資產: 0</span></div></div>
-
+<br>
 <div class="tab">
   <button class="tablinks" onclick="openTab(event, 'sire')">💞 培養</button>
   <button class="tablinks" onclick="openTab(event, 'produce')">📦 生產</button>
