--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-<div class="title">👾 Sire Mound <small>v0.3.1 - 17/11/01 updata </small>
+<div class="title">👾 Sire Mound <small>v0.3.1 - 17/11/02 updata </small>
 <div class="status">
             <span style="margin-left: 15px" >💒 世代: 0</span>
             <span style="margin-left: 15px" >💰 資產: 0</span></div></div>
@@ -24,6 +24,7 @@
 
 <div id="updata" class="tabcontent">
   <h3>v0.3.1  </h3>
+  <p>新增了 一半的培養系統 </p>
   <p>新增了 惱人的背景音樂 </p>
   <p>修正了 錯誤的菜單位置 </p><br>
   <h3>v0.3.0  </h3>
