--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -32,6 +32,7 @@
   <p>新增了 更新紀錄 </p>
 </div>
 <div id="sire" class="tabcontent">
+<span>培養欄位</span>
 <table>
   <tr>
     <th>🐜 狀態</th>
@@ -43,7 +44,7 @@
     <th>🏹 攻擊</th>
     <th>🎯 抵禦</th>
   </tr>
-<br><div id="sireProgress"><div id="sireBar"></div></div>
+
   <tr>
     <td>👑 蜂王</td>
     <td>5</th>
@@ -65,7 +66,35 @@
     <td>5</th>
   </tr>
 </table>
-
+<div id="sireProgress"><div id="sireBar"></div></div>
+<span>巢穴欄位</span>
+<table>
+<br>
+  <tr>
+    <td>空值</td>
+    <td></th>
+    <td></th>
+    <td></th>
+    <td></th>
+    <td></th>
+    <td></th>
+    <td></th>
+  </tr>
+  <tr>
+    <td>空值</td>
+    <td></th>
+    <td></th>
+    <td></th>
+    <td></th>
+    <td></th>
+    <td></th>
+    <td></th>
+  </tr>
+</table>
+<button onclick="">繼位</button>
+<button onclick="">勞工</button>
+<button onclick="">冒險</button>
+<button onclick="">消除</button><br>
 
 <span>目前還是展示用說明.上方的繁殖條跑滿之後即可繁衍出下一代.</span><br>
 <span>由一公一母的🐜下去繁殖</span><br>
