--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -32,7 +32,7 @@
   <p>新增了 更新紀錄 </p>
 </div>
 <div id="sire" class="tabcontent">
-<span>培養欄位</span>
+<span>樣本欄位</span>
 <table>
   <tr>
     <th>🐜 狀態</th>
