--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -124,12 +124,18 @@
 
 <div id="passive" class="tabcontent">
   <span>天賦頁面</span> 
-  <p>進化條件不足.</p>
+  <p>[被動]快速培養 - 減少 培養所需時間.</p>
+  <p>[被動]基因異變 - 增加 突變基因機率.</p>
+  <p>[被動]自動工廠 - 增加 工廠生產產能.</p>
 </div>
 
 <div id="store" class="tabcontent">
   <span>商店頁面</span> 
-  <p>未開發.</p>
+  <p>購買 增加培養欄位.</p>
+  <p>購買 增加樣本欄位.</p>
+  <p>購買 增加工廠欄位.</p>
+  <p>購買 增加冒險欄位.</p>
+  <p>購買 挖掘道具.</p>
 </div>
 
 <div id="achievement" class="tabcontent">
