--- a/SireMound/index.htm
+++ b/SireMound/index.htm
@@ -109,17 +109,16 @@
 
 <div id="produce" class="tabcontent">
  <span>工廠頁面</span> 
-  <p>把你討厭的🐜，丟進來未你產能賺錢吧。哈哈哈！</p> 
+  <p>派遣你的🐜，丟進來為你生產賺錢！</p> 
 </div>
 
 <div id="adventure" class="tabcontent">
   <span>探險頁面</span> 
-  <p>派遣你的🐜，讓他打片天下。</p>
+  <p>派遣你的🐜，搜索世界打片天下。</p>
 </div>
 
 <div id="mine" class="tabcontent">
   <span>挖掘頁面</span> 
-  <p>挖好挖滿。</p>
 </div>
 
 <div id="passive" class="tabcontent">
