--- a/index.htm
+++ b/index.htm
@@ -6,13 +6,11 @@
 </head>
 <body>
 
-<div class="title">阿空垃圾桶 <small> 17/11/01 updata </small></div>
+<div class="title">阿空垃圾桶 <small> 18/12/28 updata </small></div>
 <p>歡迎來到阿空的垃圾桶.</p>
 <p>聽說這邊專門收垃圾. (?</p>
 
-
-
-<p><a href="./SireMound">📁 繁殖山丘 Sire Mound</a></p>
+<p><a href="./CraftingIdle">📁 CraftingIdle</a></p>
 
 </body>
 </html>
