--- a/CraftingIdle/index.htm
+++ b/CraftingIdle/index.htm
@@ -18,9 +18,10 @@
   <a href="./index.htm"><img src="./img/zoom_icon.png" width="32px"></a>
   <a href="./index.htm"><img src="./img/align_just.png" width="32px"></a>
   <a href="./index.htm"><img src="./img/wrench_icon.png" width="32px"></a>
+   <a href="./index.htm"><img src="./img/wrench_icon.png" width="32px"></a>
 </div>
 
-<div style="margin-top:60px;padding:8px 8px 1000px;font-size:24px;">
+<div style="margin-top:60px;padding:8px 8px 2000px;font-size:24px;">
   <p><b>⚡注意！該網頁目前還在進行展示階段，請不要放置超過10分鐘。</b></p>
 
 </div>
