--- a/CraftingIdle/index.htm
+++ b/CraftingIdle/index.htm
@@ -1,33 +1,33 @@
 ﻿
-<html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<head> <title>Crafting Idle</title>
-<link rel="shortcut icon" type="image/png" href="index.png">
-<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<html>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head> <title>Crafting Idle</title>
+	<link rel="shortcut icon" type="image/png" href="index.png">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
-</head>
-<body>
-<div id="navbar">
-  <a href="#default" id="logo">Crafting Idle</a>
-  <div id="navbar-right">
-    <a class="active" href="#home">v1.0</a>
-  </div>
-</div>
-<div id="bottombar">
-  <a href="./index.htm"><img src="./img/home_icon.png" width="32px"></a>
-  <a href="./index.htm"><img src="./img/zoom_icon.png" width="32px"></a>
-  <a href="./index.htm"><img src="./img/align_just.png" width="32px"></a>
-  <a href="./index.htm"><img src="./img/wrench_icon.png" width="32px"></a>
-   <a href="./index.htm"><img src="./img/wrench_icon.png" width="32px"></a>
-</div>
+	</head>
+	<body>
+	<div id="Logobar">
+	  <a href="#default" id="logo">Crafting Idle</a>
+	  <div id="Logobar-left">
+		<a class="active" href="#catalog">v1.0</a>
+	  </div>
+	</div>
+	<div id="bottombar">
+	  <a href="./index.htm"><img src="./img/home_icon.png" width="32px"></a>
+	  <a href="./index.htm"><img src="./img/align_just.png" width="32px"></a>
+		<a href="./index.htm"><img src="./img/zoom_icon.png" width="32px"></a>
+	  <a href="./index.htm"><img src="./img/faq_icon.png" width="32px"></a>
+	   <a href="./index.htm"><img src="./img/wrench_icon.png" width="32px"></a>
+	</div>
 
-<div style="margin-top:60px;padding:8px 8px 2000px;font-size:24px;">
-  <p><b>⚡注意！該網頁目前還在進行展示階段，請不要放置超過10分鐘。</b></p>
+	<div style="margin-top:60px;padding:8px 8px 1000px;font-size:24px;">
+	  <p><b>⚡注意！該網頁目前還在進行展示階段，請不要放置超過10分鐘。</b></p>
 
-</div>
+	</div>
 
-<script src="scripts/progress.js"></script>
+	<script src="scripts/progress.js"></script>
 
-<body>
-</body>
-</html>
+	<body>
+	</body>
+	</html>
