--- a/CraftingIdle/index.htm
+++ b/CraftingIdle/index.htm
@@ -8,9 +8,9 @@
 	</head>
 	<body>
 	<div id="Logobar">
-	  <a href="#default" id="logo">Crafting Idle</a>
+	  <a href="./index.htm" id="logo">Crafting Idle</a>
 	  <div id="Logobar-left">
-		<a class="active" href="#catalog">v1.0</a>
+		<a class="active" href="./index.htm">v1.0</a>
 	  </div>
 	</div>
 	<div id="bottombar">
