--- a/CraftingIdle/index.htm
+++ b/CraftingIdle/index.htm
@@ -1,6 +1,10 @@
 ﻿
 	<html>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<meta name="apple-mobile-web-app-title" content="Crafting Idle">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	
 	<head> <title>Crafting Idle</title>
 	<link rel="shortcut icon" type="image/png" href="index.png">
 	
