--- a/CraftingIdle/index.htm
+++ b/CraftingIdle/index.htm
@@ -4,7 +4,7 @@
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<link rel="apple-touch-icon" sizes="120x120" href="/img/wheat_icon.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="./img/wheat_icon.png">
 	<meta name="google" content="notranslate">
 
 	<head> <title>Crafting Idle</title>
