--- a/index.htm
+++ b/index.htm
@@ -1,16 +1,29 @@
 ﻿
-<!DOCTYPE html>
-<html>
-<head> <title>阿空的垃圾桶</title> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<html>
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	
+	<!-- ... NO Translate! I SAY NO! ... -->
+	<meta name="google" content="notranslate">
+		
+	<head> <title>阿空的垃圾桶</title>
+	<link rel="shortcut icon" type="image/png" href="./CraftingIdle/img/wheat_icon.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="./CraftingIdle//img/wheat_icon.png">
+	<link rel="stylesheet" type="text/css" href="./CraftingIdle/css/styles.css">
+	
+	</head>
+	
+	<body>
+	  <div style="margin-top:60px; padding:8px 8px 8px 8px;">
+	
+	  <div class="title">阿空垃圾桶 <small> 19/01/19 updata </small></div>
+	  <p>歡迎來到阿空的垃圾桶.</p>
+	  <p>聽說這邊專門收垃圾. (?</p>
 
-</head>
-<body>
-
-<div class="title">阿空垃圾桶 <small> 18/12/28 updata </small></div>
-<p>歡迎來到阿空的垃圾桶.</p>
-<p>聽說這邊專門收垃圾. (?</p>
-
-<p><a href="./CraftingIdle">📁 CraftingIdle</a></p>
-
-</body>
-</html>
+	  <p><a href="./CraftingIdle">CraftingIdle</a></p>
+	  </div>
+	</body>
+	</html>
