--- a/CraftingIdle/index.htm
+++ b/CraftingIdle/index.htm
@@ -1,10 +1,12 @@
 ﻿
 	<html>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	
+	<!-- ... NO Translate! I SAY NO! ... -->
 	<meta name="google" content="notranslate">
 
 	<head> <title>Crafting Idle</title>
