--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 	<!-- ... NO Translate! I SAY NO! ... -->
 	<meta name="google" content="notranslate">
 		
-	<head> <title>阿空的垃圾桶</title>
+	<head> <title>空空的倉庫</title>
 	<link rel="shortcut icon" type="image/png" href="./CraftingIdle/img/wheat_icon.png">
 	<link rel="apple-touch-icon" sizes="120x120" href="./CraftingIdle//img/wheat_icon.png">
 	<link rel="stylesheet" type="text/css" href="./CraftingIdle/css/styles.css">
@@ -19,9 +19,9 @@
 	<body>
 	  <div style="margin-top:60px; padding:8px 8px 8px 8px;">
 	
-	  <div class="title">阿空垃圾桶 <small> 19/01/19 updata </small></div>
-	  <p>歡迎來到阿空的垃圾桶.</p>
-	  <p>聽說這邊專門收垃圾. (?</p>
+	  <div class="title">垃圾間 <small> 19/01/19 updata </small></div>
+	  <p>歡迎來到阿空的垃圾間.</p>
+	  <p>太舊的垃圾會直接清理掉，不要問我為什麼 (?</p>
 
 	  <p><a href="./CraftingIdle">CraftingIdle</a></p>
 	  </div>
