--- a/CraftingIdle/index.htm
+++ b/CraftingIdle/index.htm
@@ -21,7 +21,7 @@
 	  <a href="#" id="logo"><img src="./img/wheat_icon.png" width="32px"> Crafting Idle</a> 
 	  
 	  <div id="Logobar-left">
-		<a class="active" href="#">v1.2</a></div>
+		<a class="active" href="#">v0.1</a></div>
 	</div>
 	<div id="bottombar">
 	  <a href="#" onclick="clickCounter(); return false;"><img src="./img/home_icon.png" width="32px"></a>
@@ -35,7 +35,7 @@
 	
 	<div id="object"><a href="#" onclick="clickCounter(); return false;"><img src="./img/wheat_icon.png"></a></div>
 	 <div id="result">小麥 : 0</div> 
-	<a>關閉瀏覽器之後將會Reset.</a> 
+	<a>關閉後會直接重置。</a> 
 
 
 	<script src="scripts/progress.js"></script>
