--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,8 @@
 	  <div class="title">雜物間 <small> 19/01/19 updata </small></div>
 	  <p>狐狸的雜物間.</p>
 
-	  <p><a href="./CraftingIdle">CraftingIdle</a></p>
+	<p><a href="./CraftingIdle">CraftingIdle</a></p>
+	<p><a href="./depot">專案庫</a></p>
 	  </div>
 	</body>
 	</html>
