--- a/index.htm
+++ b/index.htm
@@ -23,6 +23,7 @@
 	  <p>狐狸的雜物間.</p>
 
 	<p><a href="./CraftingIdle">CraftingIdle</a></p>
+	<p>New!</p>
 	<p><a href="./depot">專案庫</a></p>
 	  </div>
 	</body>
