--- a/depot/index.htm
+++ b/depot/index.htm
@@ -9,8 +9,8 @@
 	<meta name="google" content="notranslate">
 		
 	<head> <title>狐狸寫過的作業</title>
-	<link rel="shortcut icon" type="image/png" href="./CraftingIdle/img/wheat_icon.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="./CraftingIdle//img/wheat_icon.png">
+	<link rel="shortcut icon" type="image/png" href="../CraftingIdle/img/wheat_icon.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="../CraftingIdle/img/wheat_icon.png">
 	<link rel="stylesheet" type="text/css" href="../CraftingIdle/css/styles.css">
 	
 	</head>
