--- a/depot/index.htm
+++ b/depot/index.htm
@@ -19,7 +19,7 @@
 	  <div style="margin-top:60px; padding:8px 8px 8px 8px;">
 
 	  <p> 3/31. </p>
-	<p><a href="./Q1_LoopWords">Q1_LoopWords.cs</a></p>
+	<p><a href="./Q1_LoopWords.cs">Q1_LoopWords.cs</a></p>
   <p><a href="./Q2_PrimeNumber.cs">Q2_PrimeNumber.cs</a></p>
   <p><a href="./Q3_StringReplace.cs">Q3_StringReplace.cs</a></p>
 	  </div>
