--- a/depot/index.htm
+++ b/depot/index.htm
@@ -18,10 +18,19 @@
 	<body>
 	  <div style="margin-top:60px; padding:8px 8px 8px 8px;">
 
-	  <p> 3/31. </p>
-	<p><a href="./Q1_LoopWords.cs">Q1_LoopWords.cs</a></p>
-  <p><a href="./Q2_PrimeNumber.cs">Q2_PrimeNumber.cs</a></p>
-  <p><a href="./Q3_StringReplace.cs">Q3_StringReplace.cs</a></p>
+	<p> 3/31. Pre-Test </p>
+		<p><a href="./Q1_LoopWords.cs">Q1_LoopWords.cs</a></p>
+  		<p><a href="./Q2_PrimeNumber.cs">Q2_PrimeNumber.cs</a></p>
+  		<p><a href="./Q3_StringReplace.cs">Q3_StringReplace.cs</a></p>
+	<p> 4/1. AprilFools'Homework </p>
+		<p><a href="./H1_AnalyzeAddEven.cs">H1_AnalyzeAddEven.cs</a></p>
+		<p><a href="./H2_AnalyzeAddEven.cs">H2_AnalyzeAddEven.cs</a></p>
+		<p><a href="./H3_LoopReverse.cs">H3_LoopReverse.cs</a></p>
+		<p><a href="./H4_LoopReverse.cs">H4_LoopReverse.cs</a></p>
+		<p><a href="./H5_LeapYear.cs">H5_LeapYear.cs</a></p>
+		<p><a href="./H6_DateTime.BasicData.cs">H6n7_DateTime.BasicData.cs</a></p>
+		<p><a href="./H6_DateTime.Form1.cs">H6n7_DateTime.Form1.cs</a></p>
+		<p><a href="./H6_DateTime.Form1.Designer.cs">H6n7_DateTime.Form1.Designer.cs</a></p>
 	  </div>
 	</body>
 	</html>
