--- a/depot/index.htm
+++ b/depot/index.htm
@@ -18,11 +18,11 @@
 	<body>
 	  <div style="margin-top:60px; padding:8px 8px 8px 8px;">
 
-	<p> 3/31. Pre-Test [3]Question </p>
+	<p> 3/31. Pre-Test 3-Questions </p>
 		<p><small><a href="./Q1_LoopWords.cs">Q1_LoopWords.cs</a></small></p>
   		<p><small><a href="./Q2_PrimeNumber.cs">Q2_PrimeNumber.cs</a></small></p>
   		<p><small><a href="./Q3_StringReplace.cs">Q3_StringReplace.cs</a></small></p>
-	<p> 4/1. AprilFools'Homework [8]Question </p>
+	<p> 4/1. AprilFools'Homework 8-Questions </p>
 		<p><small><a href="./H1_AnalyzeAddEven.cs">H1_AnalyzeAddEven.cs</a></small></p>
 		<p><small><a href="./H2_AnalyzeAddEven.cs">H2_AnalyzeAddEven.cs</a></small></p>
 		<p><small><a href="./H3_LoopReverse.cs">H3_LoopReverse.cs</a></small></p>
