--- a/depot/index.htm
+++ b/depot/index.htm
@@ -33,7 +33,7 @@
 		<p><small><a href="./H6_DateTime.Form1.Designer.cs">H6n7_DateTime.Form1.Designer.cs</a></small></p>
 	<p> 4/6 RiverCrossingPuzzle</p>
 		<p><small><a href="./RiverQuest.Form1.cs">RiverQuest.Form1.cs</a></small></p>
-		<p><small><a href="./RiverQuest.Form1.Designer.cs">RiverQuest.Form1.Designer.cs/a></small></p>
+		<p><small><a href="./RiverQuest.Form1.Designer.cs">RiverQuest.Form1.Designer.cs</a></small></p>
 		<p><small> 4/6 答案非完善</small></p>
 	  </div>
 	</body>
